# openact

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  OpenAct_Design_Spec_v1.0.md  OpenAct_v2_Design.md  README.md  connectors.toml  example-config.yaml  export.json  openact.db  openact.db-shm  openact.db-wal  rustfmt.toml  test.db  test.sh  test_all_interfaces_e2e.sh  test_cli_e2e.sh  test_config.yaml  test_http_e2e.sh  test_new.db  test_stdio_rpc.py  test_stdio_rpc_e2e.py
crates/openact-authflow/: Cargo.toml
crates/openact-authflow/src/: lib.rs  runner.rs  workflow.rs
crates/openact-authflow/tests/: encryption_flow.rs
crates/openact-cli/: Cargo.toml
crates/openact-cli/src/: cli.rs  error.rs  lib.rs  main.rs  utils.rs
crates/openact-config/: Cargo.toml
crates/openact-config/src/: env_resolver.rs  error.rs  lib.rs  loader.rs  manager.rs  schema.rs  schema_validator.rs
crates/openact-connectors/: Cargo.toml
crates/openact-connectors/src/: auth.rs  error.rs  lib.rs
crates/openact-core/: Cargo.toml
crates/openact-core/src/: error.rs  lib.rs  policy.rs  resolve.rs  sanitization.rs  store.rs  stream.rs  types.rs
crates/openact-core/tests/: trn_parse.rs
crates/openact-legacy/: Cargo.toml
crates/openact-legacy/data/: openact.db
crates/openact-mcp/: Cargo.toml
crates/openact-mcp-types/: Cargo.toml  README.md  generate_mcp_types.py
crates/openact-plugins/: Cargo.toml
crates/openact-protocol-adapter/: Cargo.toml
crates/openact-registry/: Cargo.toml
crates/openact-runtime/: Cargo.toml
crates/openact-server/: Cargo.toml
crates/openact-store/: Cargo.toml  DEVELOPMENT_PLAN.md  LEGACY_HTTP_ANALYSIS.md
data/: openact.db  (+2 more)
manifest/: Cargo.toml  init_db.sql
manifest/.sqlx/: query-00c37e45af74e15440f55ce84e3c90aed6de854bfdb20385bf4ae87b2ffc787b.json  query-055147b2a0c93cdd498f4ddfb638121b1a2b458026ba1869a479c15feab47f8e.json  query-0c809d87b8b0b07de7fecd935a918e2c3f491b7f52e3a5c570c9c101367745de.json  query-0f2b9302f5f5f05ec5183aa73b5322c1044a1e2bb73ff72e0ca77262240248a4.json  query-1dc2d2b9fd42299fa90fed114ac71e2b9489aaaa543f2690a78c3e0a051e9774.json  query-28b373ce45c61184aaf7348c5ea22d6472df3072403990b5046b94a8b9fc6fb1.json  query-2c07c9a33c04e778cb97cd06a2639394c54e9f3e498fe5fe4e7fc2e54ea611be.json  query-330d22f4c618134fb89f524b0a006a6c1ee468ea9da0ca159586ac25aa5c04b7.json  query-3b869744594918621c792b0b44625a6aea29327972cb148fc8bf755dc642bffc.json  query-426d7ae3d375fdf3ff3bc601bf13cb4e7d26ab541d8dad9b059682809970fdf9.json  query-491e624fdc2fc61dcc10cc9ad90b163708d31927f37d9be0610bed645a544487.json  query-4c3fe1edd5b9050418e3a4400b8a1ec7f8113e12c7ef5620f9ad17d7a0703dde.json  query-53aa378659263faf6e05256ad092b34456d7b2d790ab56d06bd3078274089c69.json  query-67269217fad4ae21e7d132770f65bf44e7c95a1a4f0ce359538ff0fc2f0bc74e.json  query-7388af981b23df2d4509c225bca9649dc3fb235e7438511eabf8b7cdeac2ef3d.json  query-8128d5036432a152757d78c0001c9cb2613d4834af879acc3e033c99ef050be5.json  query-85045c8ebddd54d9884c0548837fe8354fae7e2c865ddff381cc813b314c24f7.json  query-90bb6a54dc4629223b9b60cb2900351999fa7bbe47b3ca9e85fbe99116b9dda8.json  query-9713348b6d8e6af812c990f2bae011912161d1b851a1e82e6c8bd622a3a7c660.json  query-9ef882ed5066c5cf029a38cd8579a7663fbd0e4e039ab4aca698ed15a95d8cda.json  query-9f499c9fd0cf67f07c34bc5799c4ff9284d61327415b47a47eecfa03e2411ec3.json  query-a5a88c56aa456794bb81cc0ada94d36cee20b4c301b57283da185c6253047a00.json  query-a920ad832e77517c06d7a38616ad003e79041ba34780dbfc1d9a214cf5292b8a.json  query-ad9c77f126efcc944d6b2a13ae89b02b068b78542c8020f825e631c0c9a4f0b5.json  query-af0ff7f232f289cb22750491e9e60b089f26d00d7ccd7432a718c9c59def6686.json  query-af724ba1228e7b4f38273058a7e2c377ea9c92554559bf67c94101500a965190.json  query-b0238961eb1a51b5720aa5f295cf8afd05ed8d63457c99b40b8ac8764e74e9b0.json  query-b137d589f8507f89c9dbcea1ac4cae6f0be77d34b5985eec344e508ea6d881c2.json  query-b82310b76ab81190e43d284765e63bc6e1041d4aa031a8cec206a81ec2eab73b.json  query-bc5641b396523c533d9e7ecae052d415b14207dc40f21b8942e5de980ab0c803.json  query-bea77140af17d30476ed0e95d7a087b97c7ac56a0e46788fbe4777fcf12ab0a0.json  query-c49e06e3eff8a5ea63df77891523b832192faf77038f63e3380b59cc6a147a08.json  query-cf77b1e7e9cc32d3c38ae00f7fb3381409bcfe2041fc47567316087f5c91b7e7.json  query-d10ab7dd61fe4f2bded65216df48f21df16bc94828b57e743155a38cddced176.json  query-d4863c83938b9de1b1f89897cf94de894053c1d1b39e0fc668812bb814694cd1.json  query-d6b3007c38da1838e4035a49c7422abecb2761c7acf762fc1d44c208a1144e95.json  query-ee5bab1f3fd2639387bc3c9e61b8a129fa11bb81b110a578112f3ddf03bba4e5.json  query-f002c73fa4ba715d0eefe6cd51fae3a96c317291924eceb3497b57046c0fa61c.json  query-f44621ec320e220c92ee0b18de3db0aa1a5fc908658bffb171ccf73a66b11157.json  query-fbf843ea77ae23bdfb2d0108d68471374ffbfc997f4760d5286b3ebcb0197aad.json
manifest/data/: openact.db
manifest/docs/: provider-identification.md
manifest/examples/: action_github_user.yaml  action_sample_pagination.yaml  action_sample_pagination_link.yaml  test_action_parser.rs  test_action_trn.rs  test_ai_agent_schema_usage.rs  test_authflow_integration.rs  test_extension_handlers.rs  test_golden_playback.rs  test_openapi_golden_playback.rs  test_openapi_quality_check.rs  test_persistence.rs  test_schema_parsing.rs
manifest/migrations/: 001_openact_tables.sql  002_openact_indexes.sql
manifest/src/: lib.rs
manifest/tests/: e2e_github.rs
openact-cli/: Cargo.toml
openact-cli/src/: main.rs
openact-core/: Cargo.toml
openact-core/data/: openact.db
openact-core/src/: action_registry.rs  auth_manager.rs  auth_orchestrator.rs  config.rs  error.rs  lib.rs
openact-registry/: Cargo.toml
openact-registry/src/: lib.rs
openact-server/: Cargo.toml
openact-server/src/: main.rs
openact-service/: Cargo.toml
openact-service/src/: lib.rs  oauth.rs
openact-stdio/: Cargo.toml
openact-stdio/src/: handler.rs  main.rs  rpc.rs
openact-storage/: Cargo.toml
openact-storage/src/: config.rs  encryption.rs  error.rs  lib.rs  migrate.rs  models.rs  pool.rs  repos.rs
openapi-cli/: Cargo.toml
openapi-cli/src/: main.rs
(+493 files in other folders)
