[package]
name = "openact"
version = "0.1.0"
edition = "2024"

[dependencies]
stepflow_dsl = { package = "stepflow-dsl", path = "../stepflow-dsl" }
trn_rust = { package = "trn-rust", path = "../trn-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
indexmap = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
vaultrs = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
hmac = "0.12.1"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
time = "0.3.41"
aws-sigv4 = "1.3.4"
aws-types = "1.3.8"
http = "1.3.1"
idna = "1.0.6"
aws-credential-types = "1.2.5"
axum = { version = "0.8.4", features = ["ws"], optional = true }
tokio-util = { version = "0.7.16", features = ["rt"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tempfile = "3"

[features]
default = []
vault = ["dep:vaultrs"]
callback = ["dep:axum", "dep:tokio-util"]
server = ["dep:axum", "dep:tokio-util", "dep:tower", "dep:tower-http"]
# Aggregate feature for workflow-related modules
workflow = ["server", "callback"]

[dev-dependencies]
httpmock = "0.7"
tracing-subscriber = "0.3"
tempfile = "3"
