[package]
name = "openact-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "openact_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
manifest = { path = "../manifest" }
authflow = { path = "../authflow" }
tempfile = { workspace = true }
url = { workspace = true }
