[package]
name = "openact-core"
version = "0.1.0"
edition = "2021"
description = "OpenAct v2 核心引擎"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "native-tls"] }
bytes = "1.6"
base64 = "0.22"
rustls-pemfile = "2.0"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls", "pkce-plain"] }
once_cell = "1.19"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# TRN 系统
trn-rust = { path = "../../trn-rust" }

# AuthFlow 集成（不再需要 sqlite feature）
authflow = { path = "../authflow" }
openact-registry = { path = "../openact-registry" }

# JSONata 已下沉到上层解析层

# 多值 HTTP 参数
indexmap = { version = "2.0", features = ["serde"] }

# URL 编码
urlencoding = "2.1"
form_urlencoded = "1.2"

# 正则表达式
regex = "1.10"

# 随机数（用于重试抖动）
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
