[package]
name = "openact-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
openact-storage = { path = "../openact-storage" }
openact-registry = { path = "../openact-registry" }
openact-core = { path = "../openact-core" }
oauth2 = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
