[package]
name = "openact-stdio"
version = "0.1.0"
edition = "2021"

[dependencies]
openact-core = { path = "../openact-core" }
manifest = { path = "../manifest" }
authflow = { path = "../authflow" }

# JSON-RPC and async runtime
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "openact-stdio"
path = "src/main.rs"
