[package]
name = "openact-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["sqlite", "migrate", "encryption"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
migrate = []
encryption = ["dep:aes-gcm"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "chrono", "uuid"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
hex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
aes-gcm = { version = "0.10", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
