[package]
name = "openact-authflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"], default-features = false }
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
server = []

