[package]
name = "openact-authflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde_yaml = "0.9"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9.3"
aws-sigv4 = "1.3"
aws-credential-types = "1.2"
urlencoding = "2.1"
hmac = "0.12"
stepflow_dsl = { package = "stepflow-dsl", path = "../../../stepflow-dsl" }
openact-core = { path = "../openact-core" }
openact-store = { path = "../openact-store", features = ["sqlite"] }

# Server dependencies
axum = { version = "0.7", optional = true, features = ["ws"] }
tokio-tungstenite = { version = "0.21", optional = true }
tower = { version = "0.4", optional = true }
utoipa = { version = "4.2", optional = true, features = ["axum_extras"] }

[features]
server = ["dep:axum", "dep:tokio-tungstenite", "dep:tower"]
callback = ["server"]
openapi = ["server", "dep:utoipa"]
vault = []
store-encryption = ["openact-store/encryption"]

[lib]
path = "src/lib.rs"

[dev-dependencies]
httpmock = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite" ] }
tempfile = "3"

