[package]
name = "openact-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openact"
path = "src/main.rs"

[dependencies]
openact-core = { path = "../openact-core" }
openact-store = { path = "../openact-store" }
openact-config = { path = "../openact-config" }
openact-registry = { path = "../openact-registry" }
openact-mcp = { path = "../openact-mcp" }
openact-server = { path = "../openact-server" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["http"]

# Individual connector features (passed through to registry)
http = ["openact-registry/http"]
