[package]
name = "openact-config"
version = "0.1.0"
edition = "2021"

[dependencies]
openact-core = { path = "../openact-core" }
openact-store = { path = "../openact-store" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
regex = "1"
jsonschema = "0.17"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
