[package]
name = "openact-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
openact-core = { path = "../openact-core" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
rand = "0.8"
tokio = { version = "1", features = ["time"] }

# HTTP connector dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], optional = true }
url = { version = "2", optional = true }
oauth2 = { version = "4", default-features = false, features = ["reqwest"], optional = true }
urlencoding = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }

# PostgreSQL connector dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"], optional = true }

# MySQL connector dependencies (reuse sqlx)
# Redis connector dependencies
redis = { version = "0.24", features = ["tokio-comp"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
httpmock = "0.7"

[features]
default = []

# Individual connector features
http = ["dep:reqwest", "dep:url", "dep:oauth2", "dep:urlencoding", "dep:base64"]
postgresql = ["dep:sqlx"]
mysql = ["dep:sqlx"]
redis = ["dep:redis"]

# Convenience feature sets
all = ["http", "postgresql", "mysql", "redis"]
databases = ["postgresql", "mysql", "redis"]
