[package]
name = "openact-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
regex = "1.10"
once_cell = "1.19"

[features]
default = []

