[package]
name = "openact"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openact-cli"
path = "src/bin/openact.rs"

[dependencies]
stepflow_dsl = { package = "stepflow-dsl", path = "../../../stepflow-dsl" }
trn_rust = { package = "trn-rust", path = "../../../trn-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"
env_logger = "0.11"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", optional = true }
indexmap = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
opener = "0.7"
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
vaultrs = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
hmac = "0.12.1"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
time = "0.3.41"
aws-sigv4 = "1.3.4"
aws-types = "1.3.8"
http = "1.3.1"
idna = "1.0.6"
aws-credential-types = "1.2.5"
axum = { version = "0.8.4", features = ["ws"], optional = true }
tokio-util = { version = "0.7.16", features = ["rt"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate"] }
tempfile = "3"
utoipa = { version = "5.4", optional = true, features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0", optional = true, features = ["axum"] }

[features]
default = []
vault = ["dep:vaultrs"]
callback = ["dep:axum", "dep:tokio-util"]
server = ["dep:axum", "dep:tokio-util", "dep:tower", "dep:tower-http"]
metrics = ["dep:metrics-exporter-prometheus"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
