[package]
name = "openact-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for OpenAct"

[dependencies]
# OpenAct core components
openact-core = { path = "../openact-core" }
openact-config = { path = "../openact-config" }
openact-registry = { path = "../openact-registry", features = ["http"] }
openact-connectors = { path = "../openact-connectors", features = ["http"] }
openact-store = { path = "../openact-store" }

# Web server (for HTTP MCP)
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# JSON-RPC and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# OpenAPI documentation
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"