[package]
name = "openact-protocol-adapter"
version = "0.1.0"
edition = "2021"
description = "Protocol adapter layer for OpenAct (MCP and others)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
rmcp = { version = "0.7", features = ["server", "client"] }

[features]
default = []
