[package]
name = "openact-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
openact-core = { path = "../openact-core" }
openact-store = { path = "../openact-store" }
openact-connectors = { path = "../openact-connectors", optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []

# Individual connector features
http = ["dep:openact-connectors", "openact-connectors/http"]
