[package]
name = "openact-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# OpenAct dependencies
openact-core = { path = "../openact-core" }
openact-store = { path = "../openact-store" }
openact-config = { path = "../openact-config" }
openact-registry = { path = "../openact-registry" }

# Optional connector dependencies
openact-connectors = { path = "../openact-connectors", optional = true }

[features]
default = ["http"]
http = ["openact-connectors/http", "openact-registry/http"]
all-connectors = ["http"]