[package]
name = "openact-server"
version = "0.1.0"
edition = "2021"
description = "OpenAct Server facade combining MCP and REST (future)"

[dependencies]
openact-mcp = { path = "../openact-mcp" }
openact-core = { path = "../openact-core" }
openact-store = { path = "../openact-store" }
openact-registry = { path = "../openact-registry" }
openact-plugins = { path = "../openact-plugins" }
openact-authflow = { path = "../openact-authflow", optional = true, features = ["server"] }
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.0", features = ["v4"] }
jsonschema = "0.17"
sha2 = "0.10"
async-stream = "0.3"

[features]
default = []
authflow = ["dep:openact-authflow"]

[dev-dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
