[package]
name = "openact-store"
version = "0.1.0"
edition = "2021"

[dependencies]
openact-core = { path = "../openact-core" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
aionix-contracts = { path = "../../../aionix-contracts" }
log = "0.4"

# SQLite support  
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"], optional = true }

# Optional encryption support
aes-gcm = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]
encryption = ["dep:aes-gcm", "dep:base64", "dep:rand"]
